Adição do modelo de treino do WXAX

--- a/algorithm/trainning_calculate_wxax.ipynb
+++ b/algorithm/trainning_calculate_wxax.ipynb
@@ -1,6 +1,224 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Treinamento do modelo de `Who X also X`\n",
+    "Treinamento do modelo  de estudo paseado na interação de visualização de produtos num e-commerce, assim  criando um modelo de recomendação `quem-viu-tambem-viu`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importação da bibliotecas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lendo DataSets de produtos e interações"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_products = pd.read_csv('products.csv')\n",
+    "\n",
+    "df_interactions = pd.read_csv('interactions.csv')\n",
+    "df_interactions.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gerando Matriz de Usuarios x Produtos vistos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_interactions = df_interactions[['customer_id', 'product_id', 'action_id']]\n",
+    "users_items_matrix_df = df_interactions.pivot_table(\n",
+    "    index='customer_id',\n",
+    "    columns='product_id',\n",
+    "    values='action_id',\n",
+    ").fillna(0)\n",
+    "users_items_matrix_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo Keras com encoder e decoder\n",
+    "\n",
+    "Implementão do modelo conténdo um layer no encoder e um no decoder de tamanho 512, o espaço-latente no centro do modelo tem 256 dimensões."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.optimizers import Adam\n",
+    "from keras.layers import Input, Dense, Dropout\n",
+    "from keras.models import Model\n",
+    "\n",
+    "def autoEncoder(X):\n",
+    "  '''\n",
+    "  Autoencoder for Collaborative Filter Model\n",
+    "  '''\n",
+    "\n",
+    "  # Input\n",
+    "  input_layer = Input(shape=(X.shape[1],), name='UserScore')\n",
+    "\n",
+    "  # Encoder\n",
+    "  # -----------------------------\n",
+    "  enc = Dense(512, activation='selu', name='EncLayer1')(input_layer)\n",
+    "\n",
+    "  # Latent Space\n",
+    "  # -----------------------------\n",
+    "  lat_space = Dense(256, activation='selu', name='LatentSpace')(enc)\n",
+    "  lat_space = Dropout(0.8, name='Dropout')(lat_space) # Dropout\n",
+    "\n",
+    "  # Decoder\n",
+    "  # -----------------------------\n",
+    "  dec = Dense(512, activation='selu', name='DecLayer1')(lat_space)\n",
+    "\n",
+    "  # Output\n",
+    "  output_layer = Dense(X.shape[1], activation='linear', name='UserScorePred')(dec)\n",
+    "\n",
+    "  # this model maps an input to its reconstruction\n",
+    "  model = Model(input_layer, output_layer)    \n",
+    "\n",
+    "  return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instanciando o modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input\n",
+    "X = users_items_matrix_df.values\n",
+    "y = users_items_matrix_df.values\n",
+    "\n",
+    "# Build model\n",
+    "model = autoEncoder(X)\n",
+    "model.compile(optimizer = Adam(lr=0.0001), loss='mse')\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinando o modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train\n",
+    "hist = model.fit(x=X, y=y,\n",
+    "                  epochs=50,\n",
+    "                  batch_size=64,\n",
+    "                  shuffle=True,\n",
+    "                  validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recomendação de Conteúdo para o Usuário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict new Matrix Interactions, set score zero on visualized games\n",
+    "new_matrix = model.predict(X) * (X == 0)\n",
+    "\n",
+    "# converting the reconstructed matrix back to a Pandas dataframe\n",
+    "new_users_items_matrix_df  = pd.DataFrame(new_matrix, \n",
+    "                                          columns = users_items_matrix_df.columns, \n",
+    "                                          index   = users_items_matrix_df.index)\n",
+    "new_users_items_matrix_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommender_for_user(user_id, interact_matrix, df_content, topn = 10):\n",
+    "    '''\n",
+    "    Recommender Games for UserWarning\n",
+    "    '''\n",
+    "    pred_scores = interact_matrix.loc[user_id].values\n",
+    "\n",
+    "    df_scores   = pd.DataFrame({'product_id': list(users_items_matrix_df.columns), \n",
+    "                               'score': pred_scores})\n",
+    "\n",
+    "    df_rec      = df_scores.set_index('product_id')\\\n",
+    "                    .join(df_content.set_index('product_id'))\\\n",
+    "                    .sort_values('score', ascending=False)\\\n",
+    "                    .head(topn)[['score']]\n",
+    "    \n",
+    "    return df_rec[df_rec.score > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recommended User Games\n",
+    "recommender_for_user(user_id         = 'ID-30', \n",
+    "                     interact_matrix = new_users_items_matrix_df, \n",
+    "                     df_content      = df_products)"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python",
@@ -22,61 +240,6 @@
    "display_name": "Python 3.7.5 64-bit ('bart-algorithm': venv)"
   }
  },
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Treinamento do modelo de `Who X also X`\n",
-    "Treinamento do modelo  de estudo paseado na interação de visualização de produtos num e-commerce, assim  criando um modelo de recomendação `quem-viu-tambem-viu`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Importação da bibliotecas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_customers = pd.read_csv('customers.csv')\n",
-    "df_products = pd.read_csv('products.csv')\n",
-    "df_interactions = pd.read_csv('interactions.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>customer_id</th>\n      <th>action_id</th>\n      <th>timestamp</th>\n    </tr>\n    <tr>\n      <th>product_id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>00D41aFC</th>\n      <td>155</td>\n      <td>155</td>\n      <td>155</td>\n      <td>155</td>\n    </tr>\n    <tr>\n      <th>02cC9451</th>\n      <td>139</td>\n      <td>139</td>\n      <td>139</td>\n      <td>139</td>\n    </tr>\n    <tr>\n      <th>02eCbBdd</th>\n      <td>151</td>\n      <td>151</td>\n      <td>151</td>\n      <td>151</td>\n    </tr>\n    <tr>\n      <th>03eFDBdF</th>\n      <td>117</td>\n      <td>117</td>\n      <td>117</td>\n      <td>117</td>\n    </tr>\n    <tr>\n      <th>07cd1912</th>\n      <td>179</td>\n      <td>179</td>\n      <td>179</td>\n      <td>179</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>fFBC6e2A</th>\n      <td>154</td>\n      <td>154</td>\n      <td>154</td>\n      <td>154</td>\n    </tr>\n    <tr>\n      <th>faF63aa2</th>\n      <td>134</td>\n      <td>134</td>\n      <td>134</td>\n      <td>134</td>\n    </tr>\n    <tr>\n      <th>fd186AC9</th>\n      <td>118</td>\n      <td>118</td>\n      <td>118</td>\n      <td>118</td>\n    </tr>\n    <tr>\n      <th>fd2E4977</th>\n      <td>150</td>\n      <td>150</td>\n      <td>150</td>\n      <td>150</td>\n    </tr>\n    <tr>\n      <th>ffE17DD8</th>\n      <td>152</td>\n      <td>152</td>\n      <td>152</td>\n      <td>152</td>\n    </tr>\n  </tbody>\n</table>\n<p>500 rows × 4 columns</p>\n</div>",
-      "text/plain": "            Unnamed: 0  customer_id  action_id  timestamp\nproduct_id                                               \n00D41aFC           155          155        155        155\n02cC9451           139          139        139        139\n02eCbBdd           151          151        151        151\n03eFDBdF           117          117        117        117\n07cd1912           179          179        179        179\n...                ...          ...        ...        ...\nfFBC6e2A           154          154        154        154\nfaF63aa2           134          134        134        134\nfd186AC9           118          118        118        118\nfd2E4977           150          150        150        150\nffE17DD8           152          152        152        152\n\n[500 rows x 4 columns]"
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_interactions.groupby(['product_id']).count()"
-   ]
-  }
- ]
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
