--- a/algorithm/generate_datasets.ipynb
+++ b/algorithm/generate_datasets.ipynb
@@ -1,32 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3.7.5 64-bit ('bart-algorithm': venv)",
-      "language": "python",
-      "name": "python37564bitbartalgorithmvenv861f6a2bb5544afbac619cd0251ea853"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.5-final"
-    },
-    "colab": {
-      "name": "generate_datasets.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "machine_shape": "hm"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -85,13 +57,14 @@
       },
       "source": [
         "import string\n",
+        "import random\n",
         "from faker import Faker\n",
         "from uuid import uuid4\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -118,10 +91,10 @@
         "VIEWED = 1\n",
         "\n",
         "columns_customers = ['uuid', 'name']\n",
-        "columns_products = ['sku', 'title']\n",
+        "columns_products = ['sku', 'title', 'description', 'price']\n",
         "columns_interactions = ['customer_id', 'product_id', 'action_id','timestamp']"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -146,14 +119,14 @@
         "    columns=columns_customers,\n",
         "    data=[\n",
         "        [str(uuid4()), fake.name()]\n",
-        "        for _ in np.arange(0, number_of_rows)\n",
+        "        for _ in np.arange(0, number_of_rows / 100)\n",
         "    ]\n",
         ")\n",
         "\n",
         "# Persistindo dataset\n",
         "df_customers.to_csv('customers.csv')"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -177,14 +150,19 @@
         "df_products = pd.DataFrame(\n",
         "    columns=columns_products,\n",
         "    data=[\n",
-        "        [''.join(np.random.choice(list(string.hexdigits), 8)), fake.sentence()]\n",
-        "        for _ in np.arange(0, number_of_rows / 100)\n",
+        "        [\n",
+        "            ''.join(np.random.choice(list(string.hexdigits), 8)),\n",
+        "            fake.sentence(),\n",
+        "            fake.text(),\n",
+        "            random.randint(1, 1000)\n",
+        "        ] for _id in np.arange(0, number_of_rows / 1000)\n",
         "    ]\n",
         ")\n",
         "# Persistindo dataset\n",
-        "df_products.to_csv('products.csv')"
+        "df_products.to_csv('products.csv')\n",
+        "df_products.to_json('products.json', orient='records', indent=4)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -209,31 +187,51 @@
         "df_products = pd.read_csv('products.csv')\n",
         "\n",
         "df_sample_customers = df_customers.sample(frac=0.7).reset_index(drop=True)\n",
-        "df_sample_products = df_products.sample(frac=0.5).reset_index(drop=True)\n",
-        "\n",
-        "number_of_interactions = len(df_sample_customers)\n",
-        "\n",
-        "data = []\n",
-        "\n",
-        "for index, row in df_sample_customers.iterrows():\n",
-        "    data.append(\n",
-        "        dict(\n",
-        "            customer_id=row['uuid'],\n",
-        "            product_id=df_sample_products.sample().iloc[0]['sku'],\n",
-        "            action_id=VIEWED,\n",
-        "            timestamp=fake.date_time_between(start_date='-1d', end_date='now').timestamp()\n",
-        "        )\n",
-        "    )\n",
         "\n",
         "df_interactions = pd.DataFrame(\n",
         "    columns=columns_interactions,\n",
-        "    data=data\n",
+        "    data=[\n",
+        "        dict(\n",
+        "            customer_id=df_sample_customers.sample().iloc[0]['uuid'],\n",
+        "            product_id=df_products.sample().iloc[0]['sku'],\n",
+        "            action_id=VIEWED,\n",
+        "            timestamp=fake.date_time_between(start_date='-1d', end_date='now').timestamp()\n",
+        "        ) for _ in np.arange(0, number_of_rows)]\n",
         ")\n",
+        "\n",
         "# Persistindo dataset\n",
         "df_interactions.to_csv('interactions.csv')"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3.7.5 64-bit ('bart-algorithm': venv)",
+      "language": "python",
+      "name": "python37564bitbartalgorithmvenv861f6a2bb5544afbac619cd0251ea853"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.5-final"
+    },
+    "colab": {
+      "name": "generate_datasets.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "machine_shape": "hm"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
