Modificação do notebook de interactions

--- a/algorithm/generate_datasets.ipynb
+++ b/algorithm/generate_datasets.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Geração dos DataSets de Clientes, Produtos e Interações"
+        "## Geração dos DataSets de Interações"
       ]
     },
     {
@@ -56,10 +56,7 @@
         "colab": {}
       },
       "source": [
-        "import string\n",
-        "import random\n",
         "from faker import Faker\n",
-        "from uuid import uuid4\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np"
@@ -90,79 +87,9 @@
         "number_of_rows = 100000\n",
         "VIEWED = 1\n",
         "\n",
-        "columns_customers = ['uuid', 'name']\n",
-        "columns_products = ['sku', 'title', 'description', 'price']\n",
         "columns_interactions = ['customer_id', 'product_id', 'action_id','timestamp']"
       ],
       "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "T7fdhq0565hx",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Gerando DataSet de Clientes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Mtxa4RnE65hy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df_customers = pd.DataFrame(\n",
-        "    columns=columns_customers,\n",
-        "    data=[\n",
-        "        [str(uuid4()), fake.name()]\n",
-        "        for _ in np.arange(0, number_of_rows / 100)\n",
-        "    ]\n",
-        ")\n",
-        "\n",
-        "# Persistindo dataset\n",
-        "df_customers.to_csv('customers.csv')"
-      ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tjHWSjx165h1",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Gerando DataSet de Produtos"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9cdFI7Oz65h2",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df_products = pd.DataFrame(\n",
-        "    columns=columns_products,\n",
-        "    data=[\n",
-        "        [\n",
-        "            ''.join(np.random.choice(list(string.hexdigits), 8)),\n",
-        "            fake.sentence(),\n",
-        "            fake.text(),\n",
-        "            random.randint(1, 1000)\n",
-        "        ] for _id in np.arange(0, number_of_rows / 1000)\n",
-        "    ]\n",
-        ")\n",
-        "# Persistindo dataset\n",
-        "df_products.to_csv('products.csv')\n",
-        "df_products.to_json('products.json', orient='records', indent=4)"
-      ],
-      "execution_count": 10,
       "outputs": []
     },
     {
