Atualização do Notebook que gera um sample de interações

--- a/algorithm/generate_datasets.ipynb
+++ b/algorithm/generate_datasets.ipynb
@@ -11,34 +11,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "u-qk3Zo667Jy",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "outputId": "f75bb5e4-c8e9-4177-8096-31ac98f4e1fd"
-      },
-      "source": [
-        "! pip install Faker"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: Faker in /usr/local/lib/python3.6/dist-packages (4.0.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.4 in /usr/local/lib/python3.6/dist-packages (from Faker) (2.8.1)\n",
-            "Requirement already satisfied: text-unidecode==1.3 in /usr/local/lib/python3.6/dist-packages (from Faker) (1.3)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.4->Faker) (1.12.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "wn2Q9KEH65hg",
@@ -56,12 +28,13 @@
         "colab": {}
       },
       "source": [
-        "from faker import Faker\n",
-        "\n",
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "\n",
+        "from random import randrange, choice\n",
+        "from datetime import datetime, timedelta"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -82,15 +55,26 @@
         "colab": {}
       },
       "source": [
-        "fake = Faker('pt-BR')\n",
-        "\n",
-        "number_of_rows = 100000\n",
+        "number_of_rows = 100000 # 100K\n",
         "VIEWED = 1\n",
         "\n",
         "columns_interactions = ['customer_id', 'product_id', 'action_id','timestamp']"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Metodo para gerar a lista de datetime aleatorias\n",
+        "\n",
+        "def daterange(date1, date2):\n",
+        "    for n in range(int((date2 - date1).total_seconds()) + 1):\n",
+        "        yield date1 + timedelta(seconds=n)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -110,11 +94,25 @@
         "colab": {}
       },
       "source": [
-        "df_customers = pd.read_csv('customers.csv')\n",
-        "df_products = pd.read_csv('products.csv')\n",
+        "df_customers = pd.read_csv('../datasets/customers.csv')\n",
+        "df_products = pd.read_csv('../datasets/products.csv')\n",
         "\n",
         "df_sample_customers = df_customers.sample(frac=0.7).reset_index(drop=True)\n",
         "\n",
+        "end_dt = datetime.now()\n",
+        "start_dt = end_dt - timedelta(days=1)\n",
+        "\n",
+        "range_date = list(daterange(start_dt, end_dt))"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "df_interactions = pd.DataFrame(\n",
         "    columns=columns_interactions,\n",
         "    data=[\n",
@@ -122,15 +120,13 @@
         "            customer_id=df_sample_customers.sample().iloc[0]['uuid'],\n",
         "            product_id=df_products.sample().iloc[0]['sku'],\n",
         "            action_id=VIEWED,\n",
-        "            timestamp=fake.date_time_between(start_date='-1d', end_date='now').timestamp()\n",
+        "            timestamp=choice(range_date).timestamp()\n",
         "        ) for _ in np.arange(0, number_of_rows)]\n",
         ")\n",
         "\n",
         "# Persistindo dataset\n",
         "df_interactions.to_csv('interactions.csv')"
-      ],
-      "execution_count": 6,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
